--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 		<meta name='description' content='Increase your efficiency with the pomodoro time management technique'>
 
-		<link rel='icon' href='images/favicon.ico' type='image/x-icon'>
-		<link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon'>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22>🍅</text></svg>">
 
 		<!-- inject-style src="./src/packaged/css/styles.css" -->
 	</head>
