makes a phrasing change in the modal window

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 					<li>Work on a task for 25 minutes</li>
 					<li>Take a short, 5 minute break</li>
 					<li>Repeat</li>
-					<li>Every 4th time around, take a longer, 10 minute break</li>
+					<li>On every 4th cycle, take a longer, 10 minute break</li>
 				</ol>
 
 				<aside>Audio courtesy of <a href='http://www.orangefreesounds.com/desk-bell-sound/' target='_BLANK'>Andrew</a></aside>
