changes gulp to use custom gulp-inline-code plugin

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2280%22>🍅</text></svg>">
 
-		<!-- inject-style src="./src/packaged/css/styles.css" -->
+		<!-- inject:css -->
 	</head>
 
 	<body>
@@ -89,6 +89,6 @@
 			<source src='audio/ding.wav'></source>
 		</audio>
 
-		<!-- inject-javascript src="./src/packaged/js/pomodoro.js" -->
+		<!-- inject:js -->
 	</body>
 </html>
