renames some classes and improves responsive layout

--- a/src/index.html
+++ b/src/index.html
@@ -21,26 +21,26 @@
 					<h2>It's tomato-based time management! <a class='what' href='#'>learn more</a></h2>
 				</div>
 
-				<div class='timer_links'>
+				<div class='timer-options'>
 					<div>
 						<a rel='focus' class='selected' href='#'>FOCUS</a>
 					</div>
 					<div>
-						<a rel='short_break' href='#'>SHORT BREAK</a>
+						<a rel='short-break' href='#'>SHORT BREAK</a>
 					</div>
 					<div>
-						<a rel='long_break' href='#'>LONG BREAK</a>
+						<a rel='long-break' href='#'>LONG BREAK</a>
 					</div>
 				</div>
 
-				<div class='timers'>
+				<div class='timer'>
 					<div class='focus active' data-time='1500' data-orig='25:00'>25:00</div>
-					<div class='short_break' data-time='300' data-orig='5:00'>5:00</div>
-					<div class='long_break' data-time='600' data-orig='10:00'>10:00</div>
+					<div class='short-break' data-time='300' data-orig='5:00'>5:00</div>
+					<div class='long-break' data-time='600' data-orig='10:00'>10:00</div>
 				</div>
 
 				<div class='controls'>
-					<div class='timer_button'>
+					<div class='timer-button'>
 						<a href='#'>start timer</a>
 					</div>
 					<div class='reset'>
